Fix Settings Alignment

--- a/data/media/style.css
+++ b/data/media/style.css
@@ -192,7 +192,7 @@ font-size: 0;
 	background: #444;
 	position: absolute;
 	width: 250px;
-	top: 100px;
+	top: 75px;
 	padding: 25px;
 	-webkit-transform-origin: 0 0;
 }
